2006-10-02 Braden McDaniel  <braden@endoframe.com>

	* README: Added documentation for --disable-gtkplug configure
	option.

2006-10-01 Braden McDaniel  <braden@endoframe.com>

	Link openvrml-gtkplug using OPENVRML_RPATH (that is, an rpath to
	the directory where libmozjs resides).

	* src/openvrml-gtkplug/Makefile.am
	(AM_LDFLAGS): Use instead of openvrml_gtkplug_LDFLAGS; added
	OPENVRML_RPATH.
	(LDADD): Use instead of openvrml_gtkplug_LDADD.

2006-10-01 Braden McDaniel  <braden@endoframe.com>

	Build/package the GtkPlug application separately from the Mozilla
	plug-in.  The Mozilla plug-in is just one possible client for this
	application.

	* README: Changed OPENVRML_PLAYER variable to OPENVRML_GTKPLUG.
	* configure.ac: Output makefile for openvrml-gtkplug; check for
	GTK+; added --disable-gtkplug option; added lib/gtkglext
	subpackage.
	* openvrml.spec.in: Added openvrml-gtkplug package.
	* lib/Makefile.am (SUBDIRS): Added gtkglext.
	* lib/gtkglext/AUTHORS: Added file.
	* lib/gtkglext/COPYING: Added file.
	* lib/gtkglext/COPYING.LIB: Added file.
	* lib/gtkglext/ChangeLog: Added file.
	* lib/gtkglext/ChangeLog.pre-1-0: Added file.
	* lib/gtkglext/INSTALL: Added file.
	* lib/gtkglext/Makefile.am: Added file.
	* lib/gtkglext/NEWS: Added file.
	* lib/gtkglext/README: Added file.
	* lib/gtkglext/README.win32: Added file.
	* lib/gtkglext/TODO: Added file.
	* lib/gtkglext/configure.in: Added file.
	* lib/gtkglext/gdkglext-uninstalled.pc.in: Added file.
	* lib/gtkglext/gdkglext.pc.in: Added file.
	* lib/gtkglext/gtkglext-uninstalled.pc.in: Added file.
	* lib/gtkglext/gtkglext.nsi.in: Added file.
	* lib/gtkglext/gtkglext.pc.in: Added file.
	* lib/gtkglext/gtkglext.spec.in: Added file.
	* lib/gtkglext/setup-gtkglext.sh: Added file.
	* lib/gtkglext/docs/Makefile.am: Added file.
	* lib/gtkglext/docs/reference/Makefile.am: Added file.
	* lib/gtkglext/docs/reference/gtkglext/Makefile.am: Added file.
	* lib/gtkglext/docs/reference/gtkglext/building.sgml: Added file.